--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link href="Data/media/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="Data/media/css/site.css" rel="stylesheet">
     <style>
       body {
         padding-top: 50px;
